@@ -1,3 +1,6 @@
+HEAD
+	+ Improve save changes speed avoiding loop in postServiceHook if no changes
+	  made to roaming profiles
 3.2.19
 	+ Setup roaming profiles for each user only when the setting changes
 	  in the UI
